lavf: Do not attempt to use frame multi threading when probing.

This fixes various problems with getting stream info. For example playback of the
file of Ticket88. Multithreaded find_stream_info should be reenabled
once it works correctly
This partly reverts 212fd3a1f1121a9db20c478f1fccf15e8bb53c94

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>